--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿@{ 
     ViewData["Title"] = "About";
-}
+     }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this page to detail your site's privacy policy.</p>
-<p>@ViewData["email"]</p>
+<p>Aluno @ViewData["Aluno"]</p>
+
+<address>
+    <strong>More information: </strong> <a href="http://educandoweb.com.br">Educandoweb.com.br</a>"
+</address>
